--- a/siteFiles/style.css
+++ b/siteFiles/style.css
@@ -22,6 +22,68 @@ video {
     background-color: rgba(0,0,0,0.8);
   }
 
+  #social {
+    position: fixed;
+    top: 40%;
+    left: 0;
+    z-index:5;
+    
+  }
+  .socialIcons {
+    /* background-color: blue; */
+    background-color: transparent;
+    padding: 10px 5px;
+    margin: 10px 0;
+    transition: all 1s;
+    
+    border-radius: 5px;
+   
+  }
+ 
+  svg {
+
+    height: 30px;
+    width: 30px;
+    vertical-align: middle;
+    padding-left: 10px;
+   /* float: right; */    
+  }
+
+  #linkedin{
+    /* background-color: blue; */
+    width: 130px;
+    transform: translateX(-90px);
+    color: white;
+    border: 2px solid blue;
+  }
+
+  #email{
+    width: 240px;
+    /* background-color: tomato; */
+    transform: translateX(-200px);
+    border: 2px solid tomato;
+    
+  }
+
+  #call{
+    width: 200px;
+    /* background-color: goldenrod; */
+    transform: translateX(-160px);
+    border: 2px solid goldenrod;
+    
+
+  }
+
+  .socialIcons:hover {
+    background-color: black !important;
+    transform: translateX(0) !important;
+    /* color: black; */
+    font-weight: bold;
+  }
+
+
+
+
   .landingPage {
       width: 100%;
       height:100%;
