--- a/siteFiles/style.css
+++ b/siteFiles/style.css
@@ -26,8 +26,12 @@ video {
     position: fixed;
     top: 40%;
     left: 0;
-    z-index:5;
+    z-index:1;
     
+  }
+
+  #social:hover {
+    z-index:3;
   }
   .socialIcons {
     /* background-color: blue; */
