--- a/siteFiles/style.css
+++ b/siteFiles/style.css
@@ -153,7 +153,10 @@ video {
     }
 
     .landingPage button:hover {
-        width: 500px;
+        background-color: black;
+        cursor: pointer;
+        /* height: 50px; */
+        width: 110px;
         /* height: 100px; */
         border-color: rgb(255, 136, 0);
         
